<resources>
    <string name="app_name">Wup Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnDetails">Details</string>
    <string name="no_image_found">No image found for that cardImage</string>
    <string name="main_title_placeholder">Placeholder</string>
    <string name="title_premium">Premium Card</string>
    <string name="title_rewards">Rewards Card</string>
    <string name="title_journey">Journey Card</string>
    <string name="title_default">Card</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="available_balance">Available</string>
    <string name="current_balance">Current balance</string>
    <string name="min_payment">Min. payment</string>
    <string name="due_date">Due date</string>
    <string name="details_available">Available</string>
    <string name="details_current_balance">Current balance</string>
    <string name="balance_overview">BALANCE OVERVIEW</string>
    <string name="balance_carried_over">Balance carried over from last statement</string>
    <string name="total_spendings">Total spendings since last statement</string>
    <string name="your_last_repayment">Your last repayment</string>
    <string name="card_account_limit">Card account limit</string>
    <string name="card_account_number">Card account number</string>
    <string name="account_details">ACCOUNT DETAILS</string>
    <string name="main_card">MAIN CARD</string>
    <string name="card_number">Card number</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="supplementary_card">SUPPLEMENTARY CARD</string>
    <string name="details_activity_label">Details</string>
    <string name="no_info">-</string>
    <string name="reservations_pending_sum">Reservations/Pending (sum)</string>
</resources>